{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 22,
  "lineage": "d93842e8-a328-d513-6e92-88545bc95c5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d104418070df8f8",
            "arn": "arn:aws:ec2:eu-north-1:098136213950:elastic-ip/eipalloc-05d104418070df8f8",
            "domain": "vpc",
            "id": "eipalloc-05d104418070df8f8",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-20-218-186.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.218.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:098136213950:security-group/sg-0f07f2bfb6005c7fb",
            "description": "Security group",
            "egress": [],
            "id": "sg-0f07f2bfb6005c7fb",
            "ingress": [],
            "name": "firewall",
            "name_prefix": "",
            "owner_id": "098136213950",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077ef930f61180c43"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:098136213950:security-group-rule/sgr-0de5661976d55a332",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0de5661976d55a332",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f07f2bfb6005c7fb",
            "security_group_rule_id": "sgr-0de5661976d55a332",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:098136213950:security-group-rule/sgr-08c249d1aab8de9a3",
            "cidr_ipv4": "51.20.218.186/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08c249d1aab8de9a3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f07f2bfb6005c7fb",
            "security_group_rule_id": "sgr-08c249d1aab8de9a3",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}